# geode-cli

./: LICENSE  README.md  geode  main.py  pyproject.toml
cli/: __init__.py  main.py
commands/: clone.py  diff.py  init.py  push.py  status.py  sync.py  vault.py
lib/: archive.py  cache.py  config.py  hasher.py  ignore.py  pusher.py  workspace.py
lib/converters/: __init__.py  geotiff.py  grib.py  las.py  netcdf.py  vector.py
