[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geode-cli"
version = "0.1.0"
description = "Geode CLI for versioning spatial data vaults"
requires-python = ">=3.11"
dependencies = [
  "blake3>=0.4",
  "cfgrib>=0.9.15",
  "geopandas>=1.0",
  "httpx>=0.27.0",
  "laspy>=2.5",
  "numpy>=2.0",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "rasterio>=1.3",
  "xarray>=2024.0.0",
]

[project.scripts]
geode = "cli.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["cli*"]
